log4j-demo/k8s-ldap.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nc-pod
  name: nc-pod
spec:
  containers:
  - image: ubuntu
    name: nc-pod
  dnsPolicy: ClusterFirst
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nc-pod
  name: nc-svc
spec:
  ports:
  - name: "4444"
    port: 4444
    protocol: TCP
    targetPort: 4444
  - name: "8000"
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: "1389"
    port: 1389
    protocol: TCP
    targetPort: 1389
  selector:
    app: nc-pod
  type: LoadBalancer
status:
  loadBalancer: {}
