log4j-demo/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-ms
  labels:
    app: java-ms
spec:
  selector:
    matchLabels:
      app: java-ms
  template:
    metadata:
      labels:
        app: java-ms
    spec:
      containers:
        - name: java-ms
          image: knoxuser/java-microservice
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-ms-svc
  name: java-ms-svc
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    app: java-ms
  type: LoadBalancer
